# cflat-compiler

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  MyCompiler.slnx  README.md  TODO.md  buildAndRun.bat  buildci.bat  buildci.sh  cflat.slnx  cmake_build.bat  cmake_build.sh  example.bat  example_mac.sh  new-worktree.bat  out.ll  package_release.ps1  package_release.sh  performance.bat  rm-worktree.bat  run.bat  test.bat  test.sh  test_debug_info.bat  test_err.bat  test_hpc.bat  test_lsp.bat  test_lsp.sh  test_vectorize.bat  test_win32.bat  test_winmd.bat  vcpkg-build.bat  vcpkg.json
.github/: copilot-instructions.md
MyCompiler/: ArgParser.h  C.g4  CFlatErrorListener.h  Cflat.g4  CompilerManager.h  JsonRpcLoop.cpp  JsonRpcLoop.h  LLVMBackend.cpp  LLVMBackend.h  LspServer.cpp  LspSymbolIndex.cpp  LspSymbolIndex.h  LspTypes.h  MainListener.h  MyCompiler.cpp  MyCompiler.vcxproj  MyCompiler.vcxproj.filters  MyCompilerLLVM.cpp  MyCompilerLLVM.h  MyListener.h  antlr4.bat  main.cpp  out.ll  runtime.cb  testfile.c  testfile.cflat  testfile2.c  testfile2.cflat  testfile3.c  testfile3.cb  testfile3.myc
MyCompiler/MyCompiler/: testfile3_generics.c
MyCompiler/Test/: test_arena_channel.cb  test_basic.cb  test_c.c  test_core.cb  test_core_string.cb  test_filesystem.cb  test_generics.c  test_generics.cb  test_is_as.cb  test_library_string.c  test_move.cb  test_operators.cb  test_static.cb  test_switch_arms.cb  testfile.c  testfile2.c  testfile2.cb  testfile3.c  testfile_module.cb
MyCompiler/core/: arena.cb  arena_channel.cb  array.cb  atomic.cb  block_allocator.cb  channel.cb  cruntime.cb  dictionary.cb  filesystem.cb  fit_allocator.cb  hashset.cb  interfaces.cb  json.cb  latch.cb  list.cb  malloc_allocator.cb  math.cb  memory.cb  mutex.cb  os.cb  os.windows.cb  page_arena.cb  program.cb  queue.cb  random.cb  runtime.cb  rwlock.cb  semaphore.cb  slab_allocator.cb  spsc_queue.cb  stack.cb  stream.cb  string.cb  thread.cb  time.cb  tuple.cb
SyntaxGenerator/: C.g4  C.interp  CBaseListener.cpp  CBaseListener.h  CLexer.cpp  CLexer.h  CLexer.interp  CLexer.tokens  CListener.cpp  CListener.h  CParser.cpp  CParser.h  SyntaxGenerator.cpp  SyntaxGenerator.vcxproj  SyntaxGenerator.vcxproj.filters  testfile.cflat
Test/: debug_info_fixture.cb  span_noalias_check.cb  span_noalias_fixture.cb  test_alignas.cb  test_allocators.cb  test_annotations.cb  test_arena.cb  test_arena_program.cb  test_arena_program_field.cb  test_array.cb  test_array_init.cb  test_auto_return.cb  test_basic.cb  test_bitmap.cb  test_block_allocator.cb  test_braces.cb  test_bucket_allocator.cb  test_c.c  test_c.cb  test_c_autoextern.cb  test_c_float_macros.cb  test_c_interop.cb  test_c_package.cb  test_cast.cb  test_channel_iface.cb  test_collection_leaks.cb  test_com.cb  test_constraints.cb  test_core.cb  test_core_string.cb  test_crt.cb  test_empsimple.cb  test_field_init.cb  test_field_ownership.cb  test_filesystem.cb  test_fit_allocator.cb  test_fixed_arrays.cb  test_fp_bisect.cb  test_fpenv.cb  test_function_ptr.cb  (+60 more)
Test/cinterop/: .gitignore  build_mathlib.bat  build_mathlib.sh  mathlib.c  mathlib.h
Test/errors/: err_adjacent_string_literals.cb  err_alias_return.cb  err_alias_store_field.cb  err_alias_type_arg_not_pointer.cb  err_alias_type_arg_rejected.cb  err_align_alloc_indirect_store.cb  err_align_alloc_mismatch.cb  err_align_brace_init_store.cb  err_alignas_alloc_requires_unique.cb  err_alignas_not_power_of_two.cb  err_alignas_too_large.cb  err_alignas_zero.cb  err_aligned_new_escape.cb  err_alloc_align_cannot_infer.cb  err_annotations.cb  err_array_noncopyable_elem.cb  err_arrayview_addr_of_element.cb  err_arrayview_arithmetic.cb  err_arrayview_bind_declinit.cb  err_arrayview_bind_reassign.cb  err_arrayview_call_arg.cb  err_arrayview_cast_nonpointer.cb  err_arrayview_cast_sized.cb  err_arrayview_field_store.cb  err_arrayview_increment.cb  err_arrayview_ptr_cast.cb  err_arrayview_ptr_param.cb  err_arrayview_return.cb  err_arrow_on_value_no_operator.cb  (+221 more)
cflat/: ArgParser.h  CClangExtract.cpp  CClangExtract.h  CFlat.g4  CFlatErrorListener.h  CompilerManager.h  GrammarTreeListener.h  JsonRpcLoop.cpp  JsonRpcLoop.h  LLVMBackend.cpp  LLVMBackend.h  LspServer.cpp  LspServer.h  LspSymbolIndex.cpp  LspSymbolIndex.h  LspTypes.h  MainListener.h  MoveDataflow.h  MsbuildLite.h  MyCompiler.vcxproj.filters  NugetResolver.h  VcpkgResolver.h  Version.h  WinmdEmit.cpp  WinmdEmit.h  WinmdExtract.cpp  WinmdExtract.h  WinmdModel.h  WinmdSignature.cpp  WinmdSignature.h  WinmdStubs.cpp  cflat.vcxproj  main.cpp  pch.h
doc/: CACHING.md  CLI.md  CONTRIBUTING.md  C_INTEROP.md  DIAGNOSTIC.md  HPC.md  LANGUAGE.md  REGEX.md  THREADING.md  UI.md  WINMD.md  diagnostic.md  threading.md
example/: README.md  bitmap.cb  fp_trap_demo.cb  minesweeper.cb  missile_defender.cb  stars.cb  term_check.cb  tetris.cb
internal/: README.md  asan.md  c-interop-anon-records.md  core-deploy-staleness.md  developer-note.md  function-table-method-collision.md  intrinsics.md  language-features.md  lsp-parallel-scaling.md  macos-build.md  noalias-arrayview.md  operator-parsing.md  parallel-helpers.md  performance-benchmarks.md  run-jit-unwind.md  simd-type.md  sixel-aspect.md  span-view.md  stdlib-reference.md  string-concat-temp-flush.md  testing-notes.md  vectorize.md  worktree-vcpkg-sharing.md
performance/: perf_alloc_throughput.cb  perf_btree_scaling.cb  perf_cache_mountain.cb  perf_container_stress.cb  perf_framework.cb  perf_hashset_dict.cb  perf_hashset_dict.cpp  perf_json.cb  perf_locality.cb  perf_mpmc_contention.cb  perf_peak_memory.cb  perf_program_lifecycle.cb  perf_spin_contention.cb  perf_string_stream.cb  perf_stringbuilder.cb  perf_yes_baseline.cb  perf_yes_channel.cb  perf_yes_compare.cb  perf_yes_compare.cpp  perf_yes_spsc.cb  perf_yes_stdout.cb
vscode-extension/: .vscodeignore  MyCompiler Language Server  build.bat  build.sh  esbuild.js  install.bat  install.sh  language-configuration.json  launch.bat  launch.sh  package-lock.json  package.json  sync-version.js  vitest.config.ts
(+459 files in other folders)
